IC-2016.3 <dinesh.bhagat@dinesh-bhagat-l-c02rrbpwg8wn.local Update Markdown.xml, markdown_navigator.shared.xml

--- a/templates/Markdown.xml
+++ b/templates/Markdown.xml
@@ -3,6 +3,14 @@
     <variable name="ABBR" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="TEXT" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
+      <option name="HTML" value="false" />
+      <option name="XML" value="false" />
+      <option name="JSON" value="false" />
+      <option name="JAVA_CODE" value="false" />
+      <option name="Bash" value="false" />
+      <option name="GROOVY" value="false" />
+      <option name="MAVEN" value="false" />
+      <option name="KOTLIN" value="false" />
       <option name="OTHER" value="true" />
     </context>
   </template>
@@ -10,12 +18,28 @@
     <variable name="ADDRESS" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="LABEL" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
+      <option name="HTML" value="false" />
+      <option name="XML" value="false" />
+      <option name="JSON" value="false" />
+      <option name="JAVA_CODE" value="false" />
+      <option name="Bash" value="false" />
+      <option name="GROOVY" value="false" />
+      <option name="MAVEN" value="false" />
+      <option name="KOTLIN" value="false" />
       <option name="OTHER" value="true" />
     </context>
   </template>
   <template name=".codefence" value="```$LANGUAGE$&#10;$END$&#10;```&#10;" description="Code Fence" toReformat="false" toShortenFQNames="false" deactivated="true">
     <variable name="LANGUAGE" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
+      <option name="HTML" value="false" />
+      <option name="XML" value="false" />
+      <option name="JSON" value="false" />
+      <option name="JAVA_CODE" value="false" />
+      <option name="Bash" value="false" />
+      <option name="GROOVY" value="false" />
+      <option name="MAVEN" value="false" />
+      <option name="KOTLIN" value="false" />
       <option name="OTHER" value="true" />
     </context>
   </template>
@@ -23,6 +47,14 @@
     <variable name="ADDRESS" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="LABEL" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
+      <option name="HTML" value="false" />
+      <option name="XML" value="false" />
+      <option name="JSON" value="false" />
+      <option name="JAVA_CODE" value="false" />
+      <option name="Bash" value="false" />
+      <option name="GROOVY" value="false" />
+      <option name="MAVEN" value="false" />
+      <option name="KOTLIN" value="false" />
       <option name="OTHER" value="true" />
     </context>
   </template>
@@ -30,6 +62,14 @@
     <variable name="REFERENCE" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="LABEL" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
+      <option name="HTML" value="false" />
+      <option name="XML" value="false" />
+      <option name="JSON" value="false" />
+      <option name="JAVA_CODE" value="false" />
+      <option name="Bash" value="false" />
+      <option name="GROOVY" value="false" />
+      <option name="MAVEN" value="false" />
+      <option name="KOTLIN" value="false" />
       <option name="OTHER" value="true" />
     </context>
   </template>
@@ -37,6 +77,14 @@
     <variable name="REFERENCE" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="LABEL" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
+      <option name="HTML" value="false" />
+      <option name="XML" value="false" />
+      <option name="JSON" value="false" />
+      <option name="JAVA_CODE" value="false" />
+      <option name="Bash" value="false" />
+      <option name="GROOVY" value="false" />
+      <option name="MAVEN" value="false" />
+      <option name="KOTLIN" value="false" />
       <option name="OTHER" value="true" />
     </context>
   </template>
@@ -44,6 +92,14 @@
     <variable name="ADDRESS" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="REFERENCE" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
+      <option name="HTML" value="false" />
+      <option name="XML" value="false" />
+      <option name="JSON" value="false" />
+      <option name="JAVA_CODE" value="false" />
+      <option name="Bash" value="false" />
+      <option name="GROOVY" value="false" />
+      <option name="MAVEN" value="false" />
+      <option name="KOTLIN" value="false" />
       <option name="OTHER" value="true" />
     </context>
   </template>
@@ -51,40 +107,96 @@
     <variable name="TEXT" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="REFERENCE" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
+      <option name="HTML" value="false" />
+      <option name="XML" value="false" />
+      <option name="JSON" value="false" />
+      <option name="JAVA_CODE" value="false" />
+      <option name="Bash" value="false" />
+      <option name="GROOVY" value="false" />
+      <option name="MAVEN" value="false" />
+      <option name="KOTLIN" value="false" />
       <option name="OTHER" value="true" />
     </context>
   </template>
   <template name=".rfootnote" value="[^$REFERENCE$] $END$" description="Footnote Reference [^]" toReformat="false" toShortenFQNames="false" deactivated="true">
     <variable name="REFERENCE" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
+      <option name="HTML" value="false" />
+      <option name="XML" value="false" />
+      <option name="JSON" value="false" />
+      <option name="JAVA_CODE" value="false" />
+      <option name="Bash" value="false" />
+      <option name="GROOVY" value="false" />
+      <option name="MAVEN" value="false" />
+      <option name="KOTLIN" value="false" />
       <option name="OTHER" value="true" />
     </context>
   </template>
   <template name=".task" value="- [$STATUS$] $END$" description="Task Item - [ ] " toReformat="false" toShortenFQNames="false" deactivated="true">
     <variable name="STATUS" expression="" defaultValue=" " alwaysStopAt="true" />
     <context>
+      <option name="HTML" value="false" />
+      <option name="XML" value="false" />
+      <option name="JSON" value="false" />
+      <option name="JAVA_CODE" value="false" />
+      <option name="Bash" value="false" />
+      <option name="GROOVY" value="false" />
+      <option name="MAVEN" value="false" />
+      <option name="KOTLIN" value="false" />
       <option name="OTHER" value="true" />
     </context>
   </template>
   <template name=".table" value="| $END$ |&#10;|--|&#10;|  |&#10;" description="Markdown Table |Hdr|---|  |" toReformat="false" toShortenFQNames="false" deactivated="true">
     <context>
+      <option name="HTML" value="false" />
+      <option name="XML" value="false" />
+      <option name="JSON" value="false" />
+      <option name="JAVA_CODE" value="false" />
+      <option name="Bash" value="false" />
+      <option name="GROOVY" value="false" />
+      <option name="MAVEN" value="false" />
+      <option name="KOTLIN" value="false" />
       <option name="OTHER" value="true" />
     </context>
   </template>
   <template name=".toc" value="[TOC]: # $END$" description="Table of Contents [TOC]: # " toReformat="false" toShortenFQNames="false" deactivated="true">
     <context>
+      <option name="HTML" value="false" />
+      <option name="XML" value="false" />
+      <option name="JSON" value="false" />
+      <option name="JAVA_CODE" value="false" />
+      <option name="Bash" value="false" />
+      <option name="GROOVY" value="false" />
+      <option name="MAVEN" value="false" />
+      <option name="KOTLIN" value="false" />
       <option name="OTHER" value="true" />
     </context>
   </template>
   <template name=".wikilink" value="[[$REFERENCE$]] $END$" description="Wiki link [[]]" toReformat="false" toShortenFQNames="false" deactivated="true">
     <variable name="REFERENCE" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
+      <option name="HTML" value="false" />
+      <option name="XML" value="false" />
+      <option name="JSON" value="false" />
+      <option name="JAVA_CODE" value="false" />
+      <option name="Bash" value="false" />
+      <option name="GROOVY" value="false" />
+      <option name="MAVEN" value="false" />
+      <option name="KOTLIN" value="false" />
       <option name="OTHER" value="true" />
     </context>
   </template>
   <template name=".emoji" value=":$SHORTCUT$: $END$" description=":shortcut:" toReformat="false" toShortenFQNames="false" deactivated="true">
     <variable name="SHORTCUT" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
+      <option name="HTML" value="false" />
+      <option name="XML" value="false" />
+      <option name="JSON" value="false" />
+      <option name="JAVA_CODE" value="false" />
+      <option name="Bash" value="false" />
+      <option name="GROOVY" value="false" />
+      <option name="MAVEN" value="false" />
+      <option name="KOTLIN" value="false" />
       <option name="OTHER" value="true" />
     </context>
   </template>
